[gd_scene load_steps=2 format=3 uid="uid://gova8fdk5nyn"]

[ext_resource type="Script" path="res://scripts/start_screen.gd" id="1_jmf35"]

[node name="start screen" type="Node2D"]
script = ExtResource("1_jmf35")

[node name="start" type="Button" parent="."]
offset_left = 125.0
offset_top = 79.0
offset_right = 746.0
offset_bottom = 226.0
text = "Start"

[node name="settings" type="Button" parent="."]
offset_left = 131.0
offset_top = 260.0
offset_right = 746.0
offset_bottom = 405.0
text = "Settings"

[node name="Exit" type="Button" parent="."]
offset_left = 137.0
offset_top = 439.0
offset_right = 752.0
offset_bottom = 584.0
text = "Exit"

[connection signal="pressed" from="start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="Exit" to="." method="_on_exit_pressed"]
